Fix desktop version menu center alignment

--- a/asset/style/main.css
+++ b/asset/style/main.css
@@ -138,14 +138,13 @@ table {
 
 /* Navbar styles */
 .header {
-  padding: 24px;
+  padding: 8px;
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-content: center;
-  justify-content: space-between;
   position: fixed;
   top: 0;
+  background-color: #fff;
 }
 
 .logo > img {
@@ -153,7 +152,7 @@ table {
   height: 60px;
 }
 
-nav {
+.nav-mobile {
   flex-grow: 2;
   display: flex;
   flex-direction: row;
@@ -172,7 +171,7 @@ nav {
 }
 
 .nav-link {
-  padding: 10px 12px;
+  padding: 10px 3em;
   font-family:
 
     Inter,
@@ -465,7 +464,7 @@ textarea {
     visibility: visible;
   }
 
-  .menu {
+  .nav-mobile {
     visibility: hidden;
   }
 
